--- a/storybook-static/index.html
+++ b/storybook-static/index.html
@@ -55,7 +55,15 @@
       }
     </style>
 
-    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5G0NP64EL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Z5G0NP64EL');
+    </script>
   </head>
   <body>
     <div id="root"></div>
